<resources>
    <string name="app_name">TestApp</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="sign_in">Sign In</string>
    <string name="not_regitered">Don\'t have an account?</string>
    <string name="sign_up">\u0020 Sign up!</string>
    <string name="confirm_password">repeat password</string>
    <string name="already_registered">You are already registered?</string>
    <string name="signin">Signin</string>
    <string name="log">\u0020 Login!</string>
    <string name="register">Register</string>
    <string name="title_activity_main_screen">MainScreenActivity</string>
    <string name="large_text">
        "You are the best"
    </string>
    <string name="action_settings">Settings</string>
    <string name="fio">ФИО</string>
    <string name="telephone">telephone</string>
    <string name="log_out">Log out</string>
</resources>
