<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textview_fio"
        android:layout_width="143dp"
        android:layout_height="50dp"
        android:layout_marginTop="300dp"
        android:hint="@string/fio"/>
    <TextView
        android:id="@+id/textview_telephone"
        android:layout_width="143dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:hint="@string/telephone" />


    <TextView
        android:id="@+id/textview_login"
        android:layout_width="143dp"
        android:layout_height="50dp"

        android:hint="@string/login" />



    <Button
        android:id="@+id/button_log_out"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/log_out" />



</LinearLayout>